src/objects/SaiObject11__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <description>1</description>
        <label>Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PickListField5__c</fullName>
        <label>PickListField5</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>112</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>field13__c</fullName>
        <label>field13</label>
        <type>Phone</type>
    </fields>
    <label>SaiObject11</label>
    <nameField>
        <label>SaiObject11 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SaiObject11s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>